# arkfind

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
DinoFinder/: .gitignore  CMakeLists.txt  README.md
DinoFinder/.github/workflows/: build.yml
DinoFinder/Source/: DinoFinder.cpp  DinoFinder.h
Source/: DinoFinder.cpp  DinoFinder.h
